--- a/Source/Server/Services/XinFenBao/Interface/WSModel.Context.tt
+++ b/Source/Server/Services/XinFenBao/Interface/WSModel.Context.tt
@@ -2,7 +2,7 @@
 <#@ include file="EF6.Utility.CS.ttinclude"#><#@
  output extension=".cs"#><#
 
-const string inputFile = @"WSModel.edmx";
+const string inputFile = @"wsModel.edmx";
 var textTransform = DynamicTextTransformation.Create(this);
 var code = new CodeGenerationTools(this);
 var ef = new MetadataTools(this);
