--- a/Source/Server/Common/ORM/WSModel.Context.tt
+++ b/Source/Server/Common/ORM/WSModel.Context.tt
@@ -41,13 +41,13 @@ namespace <#=code.EscapeNamespace(codeNamespace)#>
 
 #>
 using System;
+using System.Data.Entity.Core.Objects;
 using System.Data.Entity;
 using System.Data.Entity.Infrastructure;
 <#
 if (container.FunctionImports.Any())
 {
 #>
-using System.Data.Entity.Core.Objects;
 using System.Linq;
 <#
 }
@@ -55,29 +55,67 @@ using System.Linq;
 
 <#=Accessibility.ForType(container)#> partial class <#=code.Escape(container)#> : DbContext
 {
-    public <#=code.Escape(container)#>()
+	public <#=code.Escape(container)#>()
+        : this(false) { }
+
+    public <#=code.Escape(container)#>(bool proxyCreationEnabled)
         : base("name=<#=container.Name#>")
     {
-<#
-if (!loader.IsLazyLoadingEnabled(container))
-{
-#>
-        this.Configuration.LazyLoadingEnabled = false;
-<#
-}
+		<#
+		if (!loader.IsLazyLoadingEnabled(container))
+		{
+		#>
+				this.Configuration.LazyLoadingEnabled = false;
+		<#
+		}
 
-foreach (var entitySet in container.BaseEntitySets.OfType<EntitySet>())
-{
-    // Note: the DbSet members are defined below such that the getter and
-    // setter always have the same accessibility as the DbSet definition
-    if (Accessibility.ForReadOnlyProperty(entitySet) != "public")
-    {
-#>
-        <#=codeStringGenerator.DbSetInitializer(entitySet)#>
-<#
+		foreach (var entitySet in container.BaseEntitySets.OfType<EntitySet>())
+		{
+			// Note: the DbSet members are defined below such that the getter and
+			// setter always have the same accessibility as the DbSet definition
+			if (Accessibility.ForReadOnlyProperty(entitySet) != "public")
+			{
+		#>
+				<#=codeStringGenerator.DbSetInitializer(entitySet)#>
+		<#
+			}
+		}
+		#>
+        this.Configuration.ProxyCreationEnabled = proxyCreationEnabled;
     }
-}
-#>
+	
+    public <#=code.Escape(container)#>(string connectionString)
+      : this(connectionString, false) { }
+	  
+    public <#=code.Escape(container)#>(string connectionString, bool proxyCreationEnabled)
+        : base(connectionString)
+    {
+		<#
+		if (!loader.IsLazyLoadingEnabled(container))
+		{
+		#>
+				this.Configuration.LazyLoadingEnabled = false;
+		<#
+		}
+
+		foreach (var entitySet in container.BaseEntitySets.OfType<EntitySet>())
+		{
+			// Note: the DbSet members are defined below such that the getter and
+			// setter always have the same accessibility as the DbSet definition
+			if (Accessibility.ForReadOnlyProperty(entitySet) != "public")
+			{
+		#>
+				<#=codeStringGenerator.DbSetInitializer(entitySet)#>
+		<#
+			}
+		}
+		#>
+        this.Configuration.ProxyCreationEnabled = proxyCreationEnabled;
+    }	
+	
+    public ObjectContext ObjectContext
+    {
+      get { return ((IObjectContextAdapter)this).ObjectContext; }
     }
 
     protected override void OnModelCreating(DbModelBuilder modelBuilder)
